fix: steps alignment

--- a/src/components/pages/Home/Onboarding/Main.module.css
+++ b/src/components/pages/Home/Onboarding/Main.module.css
@@ -6,7 +6,7 @@
 
 .step {
   width: 100%;
-  top: 0;
+  top: 50%;
   position: absolute;
 }
 
